[gd_scene load_steps=8 format=2]

[ext_resource path="res://Car game v4/Cars/Car grey/Car grey.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://sounds/gun_shoot.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/car_explosion.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/damage.mp3" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 18.0

[sub_resource type="Animation" id=2]
resource_name = "explosion"

[node name="enemy" type="Node2D"]
script = ExtResource( 2 )

[node name="CarGrey" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="EnemyArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explosion = SubResource( 2 )

[node name="shot_timer" type="Timer" parent="."]

[node name="gun_shoot_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.835308, 1.59269 )

[node name="car_explosion_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="damage_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[connection signal="area_entered" from="EnemyArea" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="shot_timer" to="." method="_on_shot_timer_timeout"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
